webapp-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: apache
spec:
  ingressClassName: nginx
  rules:
  - host: apache.40.74.10.12.nip.io
    http:
      paths:
      - backend:
          service:
            name: apache
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
